Updated phasepy examples!

--- a/phasepy-examples/1. Components and mixtures.ipynb
+++ b/phasepy-examples/1. Components and mixtures.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Single components\n",
     "\n",
-    "Physical properties are specified when a component is created. Typical properties include critical properties (Tc, Pc, Zc, Vc), acentric factor (w), Antoine Coefficients (Ant) and group specification for Modified UNIFAC group contribution (GC) method."
+    "Physical properties are specified when a component is created. Typical properties include critical properties (``Tc``, ``Pc``, ``Zc``, ``Vc``), acentric factor (``w``), Antoine Coefficients (``Ant``) and group specification for Modified UNIFAC group contribution (``GC``) method."
    ]
   },
   {
@@ -72,14 +72,6 @@
       "Liquid density: 0.01497960198094922\n",
       "Vapor density: 3.515440899573752e-05\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user/miniconda3/lib/python3.8/site-packages/numpy/core/_asarray.py:136: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  return array(a, dtype, copy=False, order=order, subok=True)\n"
-     ]
     }
    ],
    "source": [
@@ -122,7 +114,8 @@
    "source": [
     "## Mixtures\n",
     "\n",
-    "Mixtures are created from components:"
+    "Mixtures are created from components with the ``mixture`` class function.\n",
+    "The mixture function allows setting interaction parameters, such for NRTL model (``mixture.NRTL``), Wilson model (``mixture.wilson``), Redlich-Kister polynomial (``mixture.rk``) and UNIFAC model (``mixture.unifac``)."
    ]
   },
   {
@@ -256,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
