--- a/phasepy-examples/2. Property calculation from Cubic EoS.ipynb
+++ b/phasepy-examples/2. Property calculation from Cubic EoS.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "### Pure Fluids\n",
+    "\n",
     "A fluid is created (``water``) and then the EoS object is created. The ``eosp`` object includes the methods to evaluate properties from the equation of state, such as, densities, pressure, fugacity coefficients, chemical potential and some thermal derived properties (residual entropy, residual enthalpy, residual heat capacities and speed of sound).\n",
     "\n",
     "**warning:** thermal derived properties are computed with numerical derivatives using $O(h^4)$ approximation."
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +61,7 @@
        "(0.045697369422639834, 3.5769380018112745e-05)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +91,7 @@
        "(array([1.]), array([1.]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,14 +109,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For pure fluids, the ``eos.psat`` method allows to compute the saturation pressure at given temperature. It returns the equilibrium pressure and molar volumes of the liquid and vapor phase. \n",
+    "For pure fluids, the ``eos.psat`` method allows to compute the saturation pressure at given temperature. It returns the equilibrium pressure and molar volumes of the liquid and vapor phase. Similarly, the ``eos.tsat`` method allows to compute the saturation temperarute at given pressure.\n",
     "\n",
     "The phase equilibria can be verified through fugacity coefficients using the ``eos.logfug`` method or by using chemical potentials with the ``eos.muad`` method. The chemical potentials require that dimensionless density and temperature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +125,14 @@
      "text": [
       "Fugacity coefficients: True\n",
       "Chemical potential: True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gusta\\anaconda3\\lib\\site-packages\\phasepy-0.0.49-py3.8-win-amd64.egg\\phasepy\\cubic\\cubicpure.py:426: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  zfactor = np.sqrt(a/ci*10**5/100**6)*10**-10\n"
      ]
     }
    ],
@@ -148,6 +159,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fugacity coefficients: True\n",
+      "Chemical potential: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# computing saturation temperature\n",
+    "P = 1.01325 # bar\n",
+    "Tsat, vlsat2, vvsat2 = eosp.tsat(P, T0=350.)\n",
+    "\n",
+    "# checking fugacity coefficients\n",
+    "logfugl, vlsat = eosp.logfug(Tsat, P, 'L')\n",
+    "logfugv, vvsat = eosp.logfug(Tsat, P, 'V')\n",
+    "\n",
+    "\n",
+    "# checking chemical potentials\n",
+    "Tfactor, Pfactor, rofactor, tenfactor, zfactor = eosp.sgt_adim(Tsat)\n",
+    "\n",
+    "Tad2 = Tsat*Tfactor\n",
+    "rholad2 = 1/vlsat2 * rofactor\n",
+    "rhovad2 = 1/vvsat2 * rofactor\n",
+    "\n",
+    "mul = eosp.muad(rholad2, Tad2)\n",
+    "muv = eosp.muad(rhovad2, Tad2)\n",
+    "\n",
+    "print('Fugacity coefficients:', np.allclose(logfugl, logfugv ))\n",
+    "print('Chemical potential:', np.allclose(mul, muv ))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -158,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +216,9 @@
      "text": [
       "Vaporization Entropy :  [128.64101949] J / mol K\n",
       "Vaporization Enthalpy :  [43737.94662499] J / mol\n",
-      "Residual isochoric heat capacity :  [30.75238107] J / mol K\n",
-      "Residual isobaric heat capacity :  [47.74395699] J / mol K\n",
-      "Speed of sound :  [508.71361585] m / s\n"
+      "Residual isochoric heat capacity :  [30.75238706] J / mol K\n",
+      "Residual isobaric heat capacity :  [47.74391561] J / mol K\n",
+      "Speed of sound :  [508.68253869] m / s\n"
      ]
     }
    ],
@@ -177,7 +226,7 @@
     "# vaporization entropy in J/mol K\n",
     "Svap = eosp.EntropyR(T, Psat, 'V') - eosp.EntropyR(T, Psat, 'L')\n",
     "\n",
-    "# vaporization enthalpy in J/mol K\n",
+    "# vaporization enthalpy in J/mol\n",
     "Hvap = eosp.EnthalpyR(T, Psat, 'V') - eosp.EnthalpyR(T, Psat, 'L')\n",
     "\n",
     "# isochoric and isobaric residual heats capacities in J / mol K\n",
@@ -201,6 +250,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "### Fluid mixtures\n",
+    "\n",
     "The EoS can be used for mixtures. The mixture is first created from two pure fluids using the ``mixture`` class. \n",
     "In this example the mixture is modeled with the Peng-Robinson EoS using the MHV mixing rule and the UNIFAC activity coefficient model. \n",
     "\n",
@@ -211,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +299,7 @@
        "(0.01905921137858399, 3.611599060036928e-05)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +329,7 @@
        "(0.999999999998181, 0.9999999999999996)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +373,7 @@
        "array([-0.05741901,  0.01584424])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +383,6 @@
     "lnphimix, v = eos.logfugmix(x, T, P, 'L')\n",
     "\n",
     "print('Partial molar property : ', np.allclose(lnphimix, np.dot(lnphi, x)))\n",
-    "\n",
     "\n",
     "rhofactor = eos.b[0]\n",
     "rhoad = 1/v * rofactor\n",
@@ -343,14 +394,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ``eos`` object also includes the calculation of some thermal derived properties such as residual entropy (``eos.EntropyR``), residual enthalpy (``eos.EnthalpyR``), residual isochoric heat capacity (``eos.CvR``), , residual isobaric heat capacity (``eos.CpR``).\n",
+    "The ``eos`` object also includes the calculation of some thermal derived properties such as residual entropy (``eos.EntropyR``), residual enthalpy (``eos.EnthalpyR``), residual isochoric heat capacity (``eos.CvR``), residual isobaric heat capacity (``eos.CpR``).\n",
     "\n",
-    "For the speed of sound calculation (``eos.speed_sound``) the ideal gas heat capacities are required, in the example the isochoric and isobaric ideal gas contribution are set to $3R/2$ and $5R/2$, respectively. Better values of ideal gas heat capacities contribution can be found from empirical correlations, such as the provided by DIPPR 801."
+    "For the speed of sound calculation (``eos.speed_sound``) the ideal gas heat capacities are required, in the example, the isochoric and isobaric ideal gas contributions are set to $3R/2$ and $5R/2$, respectively. Better values of ideal gas heat capacities contribution can be found from empirical correlations, such as the provided by DIPPR 801."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -384,6 +435,14 @@
     "print('Residual isochoric heat capacity : ', Cvr, 'J / mol K')\n",
     "print('Residual isobaric heat capacity : ', Cpr, 'J / mol K')\n",
     "print('Speed of sound : ', w, 'm / s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "For further information about each method check out the documentation running: ``eos.function?``"
    ]
   },
   {
