--- a/phasepy-examples/3. Phase stability test (tpd).ipynb
+++ b/phasepy-examples/3. Phase stability test (tpd).ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stability testing with Tangent Plane Distance (TPD) function"
+    "# Stability testing with Tangent Plane Distance (TPD) function\n",
+    "\n",
+    "The [tangent plane distance](https://www.sciencedirect.com/science/article/pii/0378381282850012) ($tpd$) function allows testing the relative stability of a phase of composition $z$ against a trial phase of composition $w$ at fixed temperature and pressure].\n",
+    "\n",
+    "\n",
+    "$$ tpd(\\underline{w}) =  \\sum_{i=1}^c w_i (\\ln w_i +  \\ln \\hat{\\phi}_i(\\underline{w})\n",
+    "- \\ln z_i - \\ln \\hat{\\phi}_i(\\underline{z})) $$\n",
+    "\n",
+    "Usually, this function is minimized to check the stability of the given phase based on the following criteria:\n",
+    "- If the minimized $tpd$ is positive, the global phase $z$ is stable.\n",
+    "- If the minimized $tpd$ is zero, the global phase $z$ and trial phase $w$ are in equilibrium.\n",
+    "- If the minimized $tpd$ is negative, the global phase $z$ is unstable\n",
+    "\n",
+    "\n",
+    "In this notebook, stability analysis for the mixture of water and mtbe will be performed. To start, the required functions are imported."
    ]
   },
   {
@@ -22,12 +36,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```tpd_min``` function searches for phase composition corresponding to a minimum of TPD function given an initial value. User needs to specify wheter the trial (W) and reference (Z) phases are liquids or vapors."
+    "Then, the mixture of water and mtbe and its interaction parameters are set up."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water = component(name='water', Tc=647.13, Pc=220.55, Zc=0.229, Vc=55.948, w=0.344861,\n",
+    "                  Ant=[11.64785144, 3797.41566067, -46.77830444],\n",
+    "                  GC={'H2O':1})\n",
+    "\n",
+    "mtbe = component(name='mtbe', Tc=497.1, Pc=34.3, Zc=0.273, Vc=329.0, w=0.266059,\n",
+    "                 Ant=[9.16238246, 2541.97883529, -50.40534341], \n",
+    "                 GC={'CH3':3, 'CH3O':1, 'C':1})\n",
+    "\n",
+    "mix = mixture(water, mtbe)\n",
+    "mix.unifac()\n",
+    "eos = preos(mix, 'mhv_unifac')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "### tpd_min\n",
+    "\n",
+    "The ``tpd_min`` function searches for a phase composition corresponding to a minimum of $tpd$ function given an initial value. The user needs to specify whether the trial (W) and reference (Z) phases are liquids (``L``) or vapors (``V``)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,17 +83,6 @@
     }
    ],
    "source": [
-    "water = component(name='water', Tc=647.13, Pc=220.55, Zc=0.229, Vc=55.948, w=0.344861,\n",
-    "                  Ant=[11.64785144, 3797.41566067, -46.77830444],\n",
-    "                  GC={'H2O':1})\n",
-    "\n",
-    "mtbe = component(name='mtbe', Tc=497.1, Pc=34.3, Zc=0.273, Vc=329.0, w=0.266059,\n",
-    "                 Ant=[9.16238246, 2541.97883529, -50.40534341], \n",
-    "                 GC={'CH3':3, 'CH3O':1, 'C':1})\n",
-    "\n",
-    "mix = mixture(water, mtbe)\n",
-    "mix.unifac()\n",
-    "eos = preos(mix, 'mhv_unifac')\n",
     "T = 320.0\n",
     "P = 1.01\n",
     "z = np.array([0.5, 0.5])\n",
@@ -63,12 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```tpd_minimas``` will attempt (but does not guarantee) to search for different minima of the TPD function."
+    "---\n",
+    "### tpd_minimas\n",
+    "The ``tpd_minimas`` function will attempt (but does not guarantee) to search for ``nmin`` minima of the $tpd$ function. As for the ``tpd_min`` function, you need to specify the aggregation state of the global (``z``) and the trial phase (``w``)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +124,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```lle_init``` function can be used to find initial guess for liquid-liquid equilibrium phase compositions."
+    "---\n",
+    "### lle_init\n",
+    "\n",
+    "Finally, the ``lle_init`` function can be used to find initial guesses for liquid-liquid equilibrium calculation.\n",
+    "\n",
+    "This function call ``tpd_minimas`` with ``nmin=2`` and liquid state for trial and global phase."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +143,7 @@
        "(array([0.99538258, 0.00461742]), array([0.30683406, 0.69316594]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
