--- a/phasepy-examples/4. Two phase flash (TP).ipynb
+++ b/phasepy-examples/4. Two phase flash (TP).ipynb
@@ -6,7 +6,21 @@
    "source": [
     "# Two-Phase Flash Calculation (VLE and LLE)\n",
     "\n",
-    "Phasepy ``flash`` routine solves phase compositions for equilibrium flash in constant pressure and temperature (PT-flash). Examples below apply Peng-Robinson equation of state. The mixing rule applied is Modified Huron Vidal combined with Modified UNIFAC."
+    "The isothermal-isobaric two-phase flash is carried out by a combination of accelerated successive substitution (ASS) to update phase compositions and Halley's method to solve the Rachford-Rice mass balance. \n",
+    "\n",
+    "$$ FO = \\sum_{i=1}^c \\left( x_i^\\beta - x_i^\\alpha \\right) = \\sum_{i=1}^c \\frac{z_i (K_i-1)}{1+\\psi (K_i-1)} $$\n",
+    "\n",
+    "Where,  $K_i = x_i^\\beta/x_i^\\alpha =\\hat{\\phi}_i^\\alpha /\\hat{\\phi}_i^\\beta  $ represents the equilibrium constant  and $\\psi$ the fraction of the phase $\\beta$. The described method can be slow at high pressures, for that reason, the number of cycles of ASS is limited to ``nacc`` cycles and if no solution is reached the algorithm changes to a second-order procedure based on Gibbs free energy minimization:\n",
+    "\n",
+    "$$ min \\, {G(\\underline{F}^\\alpha, \\underline{F}^\\beta)} = \\sum_{i=1}^c (F_i^\\alpha \\ln \\hat{f}_i^\\alpha + F_i^\\beta \\ln \\hat{f}_i^\\beta) $$\n",
+    "\n",
+    "Here, $F$ refers to the number of moles and $\\hat{f}$ to the effective fugacity, the superscript refers to the phase index and the subscript to the specie index. The optimization is performed using SciPy minimization routines.\n",
+    "\n",
+    "Phasepy ``flash`` routine solves phase compositions for two-phase flash at constant pressure and temperature (PT-flash).  The ```flash``` function requires initial guesses for the phase compositions, the states of the phases, i.e ```LV``` fo liquid-vapor flash or ```LL``` for liquid-liquid flash, the global phase composition (``z``),  the temperature (``T``) and pressure (``P``) of the system.\n",
+    "\n",
+    "In this notebook, Vapor-Liquid and Liquid-Liquid flash calculation will be exemplified. Examples below apply Peng-Robinson equation of state. The mixing rule applied is Modified Huron Vidal combined with Modified UNIFAC.\n",
+    "\n",
+    "To start, the required functions are imported."
    ]
   },
   {
@@ -24,14 +38,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ```flash``` function requires initial guesses for the phase compositions, the states of the phases, i.e ```LV``` fo liquid-vapor flash or ```LL``` for liquid-liquid flash, the global phase composition and the temperature and pressure of the system."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vapor Liquid Equilibrium Flash"
+    "---\n",
+    "### Vapor Liquid Equilibrium Flash\n",
+    "\n",
+    "This calculation will be exemplified for the mixture of ethanol and water."
    ]
   },
   {
@@ -44,14 +54,14 @@
       "text/plain": [
        "      T: 350.0\n",
        "      P: 0.8\n",
-       "   beta: 0.466570454690678\n",
-       "  error: 9.467811189463731e-09\n",
+       "   beta: 0.46657039791747673\n",
+       "  error: 9.45706631801738e-09\n",
        "   iter: 7\n",
-       "      X: array([0.23951593, 0.76048407])\n",
-       "     v1: 32.508877873118664\n",
+       "      X: array([0.23951597, 0.76048403])\n",
+       "     v1: 32.50887949066504\n",
        " state1: 'L'\n",
        "      Y: array([0.58348128, 0.41651872])\n",
-       "     v2: 35869.13850299179\n",
+       "     v2: 35869.13850298779\n",
        " state2: 'V'"
       ]
      },
@@ -82,7 +92,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Liquid Liquid Equilibrium Flash"
+    "---\n",
+    "### Liquid Liquid Equilibrium Flash\n",
+    "\n",
+    "This calculation will be exemplified for the mixture of water and butanol."
    ]
   },
   {
@@ -95,14 +108,14 @@
       "text/plain": [
        "      T: 320.0\n",
        "      P: 1.01\n",
-       "   beta: 0.4110257205721999\n",
-       "  error: 2.4238302780752387e-09\n",
-       "   iter: 10\n",
-       "      X: array([0.15602773, 0.84397227])\n",
-       "     v1: 102.2534074025592\n",
+       "   beta: 0.4110203174178702\n",
+       "  error: 3.9114930421425963e-10\n",
+       "   iter: 11\n",
+       "      X: array([0.1560354, 0.8439646])\n",
+       "     v1: 102.25264838736771\n",
        " state1: 'L'\n",
        "      Y: array([0.99289086, 0.00710914])\n",
-       "     v2: 22.185269194247574\n",
+       "     v2: 22.185268842747625\n",
        " state2: 'L'"
       ]
      },
@@ -135,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
