--- a/phasepy-examples/5. Bubble Point calculation.ipynb
+++ b/phasepy-examples/5. Bubble Point calculation.ipynb
@@ -6,7 +6,28 @@
    "source": [
     "# Bubble Point (VLE)\n",
     "\n",
-    "Examples of calculation of bubble point properties using Peng-Robinson equation of state. The mixing rule applied is Modified Huron Vidal combined with Modified UNIFAC."
+    "The isothermal-isobaric two-phase flash is the base for the calculation Vapor-Liquid Equilibria. This calculation is based on the solution of the Rachford-Rice mass balance. \n",
+    "\n",
+    "$$ FO = \\sum_{i=1}^c \\left( x_i^\\beta - x_i^\\alpha \\right) = \\sum_{i=1}^c \\frac{z_i (K_i-1)}{1+\\psi (K_i-1)} $$\n",
+    "\n",
+    "\n",
+    "Where,  $K_i = x_i^\\beta/x_i^\\alpha =\\hat{\\phi}_i^\\alpha /\\hat{\\phi}_i^\\beta  $ represents the equilibrium constant  and $\\psi$ the fraction of the phase $\\beta$. For bubble and dew points calculations the phase fraction $\\psi$ is known beforehand and set to 0 for bubble points (differential size bubble) and to 1 for dew point (differential size liquid drop).\n",
+    "\n",
+    "The Rachford-Rice mass balance reduces to the following equations:\n",
+    "\n",
+    "### Bubble\n",
+    "\n",
+    "$$ FO = \\sum_{i=1}^c x_i (K_i-1) = \\sum_{i=1}^c y_i -1 = 0 $$\n",
+    "\n",
+    "The solution of this calculations includes using accelerated successive substitution (ASS) to update the phase compositions in an inner loop and the quasi-Newton method is used to update pressure or temperature in an outer loop. If slow convergence is detected, the algorithm attempts to solve the following system of equations using equilibrium constants, $K$, as iteration variables. This is done using SciPy's optimization routines.\n",
+    "\n",
+    "$$ f_i = \\ln K_i + \\ln \\hat{\\phi}_i^v(\\underline{y}, T, P) -\\ln \\hat{\\phi}_i^l(\\underline{x}, T, P) \\quad i = 1,...,c $$\n",
+    "$$ f_{c+1} = \\sum_{i=1}^c (y_i-x_i) $$\n",
+    "\n",
+    "**note:** these calculations does not check for the stability of the phases.\n",
+    "\n",
+    "\n",
+    "In this notebook, examples of calculation of bubble point properties using Peng-Robinson equation of state are shown. The mixing rule applied is Modified Huron Vidal combined with Modified UNIFAC."
    ]
   },
   {
@@ -24,7 +45,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary mixture example"
+    "---\n",
+    "# Binary mixture example\n",
+    "\n",
+    "This calculation will be exemplified for the mixture of ethanol and water."
    ]
   },
   {
@@ -47,7 +71,7 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "Bubble point algorithm x, T -> y, P"
+    "#### Bubble point algorithm x, T -> y, P"
    ]
   },
   {
@@ -88,7 +112,7 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "Bubble point algorithm x, P -> y, T"
+    "#### Bubble point algorithm x, P -> y, T"
    ]
   },
   {
@@ -160,7 +184,7 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "Bubble point x, T -> y, P"
+    "#### Bubble point algorithm x, T -> y, P"
    ]
   },
   {
@@ -201,7 +225,7 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "Bubble point x, P -> y, T"
+    "#### Bubble point algorithm x, P -> y, T"
    ]
   },
   {
@@ -241,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
