--- a/phasepy-examples/6. Dew Point calculation.ipynb
+++ b/phasepy-examples/6. Dew Point calculation.ipynb
@@ -6,7 +6,28 @@
    "source": [
     "# Dew Point (VLE)\n",
     "\n",
-    "Examples of calculation of dew point properties."
+    "The isothermal-isobaric two-phase flash is the base for the calculation Vapor-Liquid Equilibria. This calculation is based on the solution of the Rachford-Rice mass balance. \n",
+    "\n",
+    "$$ FO = \\sum_{i=1}^c \\left( x_i^\\beta - x_i^\\alpha \\right) = \\sum_{i=1}^c \\frac{z_i (K_i-1)}{1+\\psi (K_i-1)} $$\n",
+    "\n",
+    "\n",
+    "Where,  $K_i = x_i^\\beta/x_i^\\alpha =\\hat{\\phi}_i^\\alpha /\\hat{\\phi}_i^\\beta  $ represents the equilibrium constant  and $\\psi$ the fraction of the phase $\\beta$. For bubble and dew points calculations the phase fraction $\\psi$ is known beforehand and set to 0 for bubble points (differential size bubble) and to 1 for dew point (differential size liquid drop).\n",
+    "\n",
+    "The Rachford-Rice mass balance reduces to the following equations:\n",
+    "\n",
+    "###  Dew \n",
+    "\n",
+    "$$ FO = 1 - \\sum_{i=1}^c \\frac{y_i}{K_i} = 1 - \\sum_{i=1}^c x_i = 0 $$\n",
+    "\n",
+    "The solution of this calculations includes using accelerated successive substitution (ASS) to update the phase compositions in an inner loop and the quasi-Newton method is used to update pressure or temperature in an outer loop. If slow convergence is detected, the algorithm attempts to solve the following system of equations using equilibrium constants, $K$, as iteration variables. This is done using SciPy's optimization routines.\n",
+    "\n",
+    "$$ f_i = \\ln K_i + \\ln \\hat{\\phi}_i^v(\\underline{y}, T, P) -\\ln \\hat{\\phi}_i^l(\\underline{x}, T, P) \\quad i = 1,...,c $$\n",
+    "$$ f_{c+1} = \\sum_{i=1}^c (y_i-x_i) $$\n",
+    "\n",
+    "**note:** these calculations does not check for the stability of the phases.\n",
+    "\n",
+    "\n",
+    "In this notebook, examples of calculation of dew point properties using Peng-Robinson equation of state are shown. The mixing rule applied is Modified Huron Vidal combined with Redlich Kister polynomial and also with Modified UNIFAC activity coefficient model."
    ]
   },
   {
@@ -52,8 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----\n",
-    "Dew point algorithm y, T -> x, P"
+    "#### Dew point algorithm y, T -> x, P"
    ]
   },
   {
@@ -65,14 +85,14 @@
      "data": {
       "text/plain": [
        "      T: 350.0\n",
-       "      P: 1.544597371354093\n",
-       "  error: 1.0031064867632722e-10\n",
+       "      P: 1.5445973713540904\n",
+       "  error: 1.0031153685474692e-10\n",
        "   iter: 6\n",
        "      X: array([0.23512692, 0.76487308])\n",
-       "     v1: 79.85925570828724\n",
+       "     v1: 79.85925570828107\n",
        " state1: 'Liquid'\n",
        "      Y: array([0.5, 0.5])\n",
-       "     v2: 18058.942068043492\n",
+       "     v2: 18058.942068043507\n",
        " state2: 'Vapor'"
       ]
      },
@@ -94,8 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----\n",
-    "Dew point algorithm y, P -> x, T"
+    "#### Dew point algorithm y, P -> x, T"
    ]
   },
   {
@@ -106,15 +125,15 @@
     {
      "data": {
       "text/plain": [
-       "      T: 341.75568327159453\n",
+       "      T: 341.7556832715943\n",
        "      P: 1.0\n",
-       "  error: 1.1546319456101694e-14\n",
+       "  error: 1.4876988529977208e-14\n",
        "   iter: 5\n",
        "      X: array([0.1357666, 0.8642334])\n",
-       "     v1: 73.2467337525917\n",
+       "     v1: 73.24673375255578\n",
        " state1: 'Liquid'\n",
        "      Y: array([0.4, 0.6])\n",
-       "     v2: 27627.203998257126\n",
+       "     v2: 27627.203998257115\n",
        " state2: 'Vapor'"
       ]
      },
@@ -168,8 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----\n",
-    "Dew point y, T -> x, P"
+    "#### Dew point algorithm y, T -> x, P"
    ]
   },
   {
@@ -209,8 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----\n",
-    "Dew point y, P -> y, T"
+    "#### Dew point algorithm y, P -> x, T"
    ]
   },
   {
@@ -250,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
