--- a/phasepy-examples/7. Liquid-Liquid Equilibria.ipynb
+++ b/phasepy-examples/7. Liquid-Liquid Equilibria.ipynb
@@ -6,12 +6,45 @@
    "source": [
     "# Liquid Liquid Equilibrium (LLE)\n",
     "\n",
-    "This example shows solution of equilibrium involving two liquid phases using ``lle`` function."
+    "Phase stability plays a key role during equilibrium computation when dealing with more than two liquid phases. For this purpose the following modified multiphase Rachford-Rice mass balance has been proposed by [Gupta et al.](https://www.sciencedirect.com/science/article/pii/037838129180021M):\n",
+    "\n",
+    "\n",
+    "$$ \\sum_{i=1}^c \\frac{z_i (K_{ik} \\exp{\\theta_k}-1)}{1+ \\sum\\limits^{\\pi}_{\\substack{j=1 \\\\ j \\neq r}}{\\psi_j (K_{ij}} \\exp{\\theta_j} -1)} = 0 \\qquad k = 1,..., \\pi,  k \\neq r $$\n",
+    "\n",
+    "Subject to:\n",
+    "\n",
+    "$$ \\psi_k \\theta_k = 0 $$\n",
+    "\n",
+    "In this system of equations, $z_i$ represents the global composition of the component $i$,  $ K_{ij} = x_{ij}/x_{ir} = \\hat{\\phi}_{ir}/\\hat{\\phi}_{ij} $ is the constant equilibrium of component $i$ in phase $j$ respect to the reference phase $r$, and $\\psi_j$ and $\\theta_j$ are the phase fraction and stability variable of the phase $j$.  \n",
+    "\n",
+    "The solution strategy is similar to the classic isothermal isobaric two-phase flash. First, a reference phase must be selected, this phase is considered stable during the procedure. In an inner loop, the system of equations is solved using multidimensional Newton's method for phase fractions and stability variables and then compositions are updated in an outer loop using accelerated successive substitution (ASS).  Once the algorithm has converged, the stability variable gives information about the phase. If it takes a value of zero the phase is stable and if it is positive the phase is not.  The proposed successive substitution method can be slow, if that is the case the algorithm attempts to minimize Gibbs Free energy of the system. This procedure also ensures stable solutions and is solved using SciPy's functions.\n",
+    "\n",
+    "$$ min \\, {G} = \\sum_{k=1}^\\pi \\sum_{i=1}^c F_{ik} \\ln \\hat{f}_{ik}  $$\n",
+    "\n",
+    "This notebook shows the solution of liquid-liquid equilibrium using the ``lle`` function. This function incorporates the algorithm described above. To start, the required functions are imported."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from phasepy import component, mixture, virialgamma, unifac\n",
+    "from phasepy.equilibrium import lle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The LLE calculation for the mixture of water and mtbe will be exemplified. First the mixture and its interaction parameters are set up. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,27 +52,23 @@
       "text/plain": [
        "           T: 320.0\n",
        "           P: 1.01\n",
-       " error_outer: 1.1444982534455961e-10\n",
-       " error_inner: 1.0505014660913268e-10\n",
-       "        iter: 13\n",
-       "        beta: array([0.58896516, 0.41103484])\n",
+       " error_outer: 2.757875312103352e-09\n",
+       " error_inner: 1.0506447387671268e-10\n",
+       "        iter: 10\n",
+       "        beta: array([0.58897476, 0.41102524])\n",
        "       tetha: array([0.])\n",
-       "           X: array([[0.1560131 , 0.8439869 ],\n",
+       "           X: array([[0.15602675, 0.84397325],\n",
        "       [0.99289324, 0.00710676]])\n",
        "           v: [None, None]\n",
        "      states: ['L', 'L']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from phasepy import component, mixture, virialgamma, unifac\n",
-    "from phasepy.equilibrium import lle\n",
-    "\n",
     "water = component(name='water', Tc=647.13, Pc=220.55, Zc=0.229, Vc=55.948, w=0.344861,\n",
     "                  Ant=[11.64785144, 3797.41566067, -46.77830444],\n",
     "                  GC={'H2O':1})\n",
@@ -64,12 +93,12 @@
    "metadata": {},
    "source": [
     "-----\n",
-    "``lle_init`` function searches for minima of the tangent plane distance (TPD) function. Results can be used as initial values for ``lle``."
+    "Initial guesses for the phase compositions can be obtained using the ``lle_init`` function. This is shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +107,7 @@
        "(array([0.99538258, 0.00461742]), array([0.30683406, 0.69316594]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
+    "For further information please also check [official documentation](https://phasepy.readthedocs.io/), or just try:\n",
     "\n",
     "```function?```"
    ]
